--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "dompurify": "^3.0.11",
     "isbot": "^4.1.0",
+    "jsdom": "^24.0.0",
     "marked": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,8 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
