fix tailwind install

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "autoprefixer": "^10.4.19",
     "dompurify": "^3.0.11",
     "isbot": "^4.1.0",
     "jsdom": "^24.0.0",
     "marked": "^12.0.1",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.13",
