--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "autoprefixer": "^10.4.19",
+    "debounce": "^2.0.0",
     "dompurify": "^3.0.11",
     "isbot": "^4.1.0",
     "jsdom": "^24.0.0",
