--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.2",
     "redis": "^4.6.13",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
