--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@lexical/plain-text": "^0.14.5",
+    "@lexical/react": "^0.14.5",
+    "@lexical/rich-text": "^0.14.5",
     "@prisma/client": "^5.12.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
