--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-intersection-observer": "^9.8.2",
     "redis": "^4.6.13",
     "tailwindcss": "^3.4.1",
-    "zod": "^3.23.4"
+    "zod": "^3.23.4",
+    "zod-validation-error": "^3.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
