--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bullmq": "^5.7.8",
     "debounce": "^2.0.0",
     "dompurify": "^3.0.11",
+    "ioredis": "^5.4.1",
     "isbot": "^4.1.0",
     "jsdom": "^24.0.0",
     "lexical": "^0.14.5",
@@ -37,6 +38,7 @@
     "@remix-run/dev": "^2.8.1",
     "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
